syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Order {
    string id = 1;
    string name = 2;
    float price = 3;
}

message OrderResponse {
    Order order = 1;
}

message GetOrderParams {
  string id = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message OrderInput {
  string name = 1;
  float price = 2;
}

service OrderService{
  rpc GetOrder(GetOrderParams) returns (Order) {}
  rpc GetAllOrders(blank) returns (OrderList) {}
  rpc CreateOrder(OrderInput) returns (Order) {}
}